<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/colorPrimary"
    tools:context=".EvidenceActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/upImage"
        android:text="@string/image"
        android:padding="15dp"
        android:layout_marginTop="50dp"
        android:textSize="17sp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/btn_background"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/upAudio"
        android:text="@string/audio"
        android:padding="15dp"
        android:textSize="17sp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/btn_background"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/upVideo"
        android:text="@string/video"
        android:background="@drawable/btn_background"
        android:padding="15dp"
        android:textSize="17sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/upPDF"
        android:text="Upload  PDF  and  submit  complaint"
        android:background="@drawable/btn_background"
        android:padding="15dp"
        android:textSize="17sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"/>

</LinearLayout>